# datasette-demo

./: LICENSE  Makefile  README.md  docker-compose.yml  metadata-publish.json  metadata.json  pyproject.toml
csv_files/: create_dummy_data.py  location.csv  organization.csv  project.csv
src/: fix_table_keys.sql  load_csv.py
src/examples/: api_example.py  sql_script.sql
